@@ -17,7 +17,7 @@
 		<java.version>17</java.version>
 	</properties>
   <dependencies>
-    
+
 		<!-- JavaFX -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -42,29 +42,21 @@
 	<build>
 		<plugins>
 			<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-			
+
 			<!-- Maven -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
 					<release>17</release>
+					<argLine>--enable-preview </argLine>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M5</version>
-			</plugin>
 
-     		<plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
+				<version>0.8.7</version>
 				<executions>
 					<execution>
 						<id>jacoco-prepare-agent</id>
@@ -72,26 +64,28 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-						<configuration>
-						</configuration>
 					</execution>
 					<execution>
 						<id>jacoco-report</id>
 						<phase>test</phase>
 						<goals>
-							<goal>report-aggregate</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>prepare-package</phase>
-						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+            </plugin>
 
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M5</version>
+			</plugin>
 
 			<!-- JUnit -->
 			<plugin>
@@ -104,6 +98,8 @@
 					<mainClass>timeMaster/timeMaster.App</mainClass>
 				</configuration>
 			</plugin>
+
+
 		</plugins>
 	</build>
 </project>
